Util_Module/test/Log/ADD_TEST.txt
> Task :Module_ADD:compileJava UP-TO-DATE
> Task :Module_ADD:processResources NO-SOURCE
> Task :Module_ADD:classes UP-TO-DATE
> Task :Module_ADD:compileTestJava UP-TO-DATE
> Task :Module_ADD:processTestResources NO-SOURCE
> Task :Module_ADD:testClasses UP-TO-DATE
> Task :Module_ADD:test UP-TO-DATE

BUILD SUCCESSFUL in 1s
3 actionable tasks: 3 up-to-date
Successfully
Module_ADD

Task Complete!
> Task :Module_ADD:compileJava
> Task :Module_ADD:processResources NO-SOURCE
> Task :Module_ADD:classes

> Task :Module_ADD:compileTestJava FAILED
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:5: error: cannot find symbol
        int result = ADD.add(0, 1);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:13: error: cannot find symbol
        int result = ADD.add(1, 0);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:21: error: cannot find symbol
        int result = ADD.add(2, 3);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:29: error: cannot find symbol
        int result = ADD.add(5, 7);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:37: error: cannot find symbol
        int result = ADD.add(7, 5);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':Module_ADD:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
2 actionable tasks: 2 executed
Successfully
Module_ADD

Task Complete!
> Task :Module_ADD:compileJava NO-SOURCE
> Task :Module_ADD:processResources NO-SOURCE
> Task :Module_ADD:classes UP-TO-DATE

> Task :Module_ADD:compileTestJava FAILED
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:5: error: cannot find symbol
        int result = ADD.add(0, 1);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:13: error: cannot find symbol
        int result = ADD.add(1, 0);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:21: error: cannot find symbol
        int result = ADD.add(2, 3);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:29: error: cannot find symbol
        int result = ADD.add(5, 7);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:37: error: cannot find symbol
        int result = ADD.add(7, 5);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':Module_ADD:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
Successfully
Module_ADD

Task Complete!
> Task :Module_ADD:compileJava NO-SOURCE
> Task :Module_ADD:processResources NO-SOURCE
> Task :Module_ADD:classes UP-TO-DATE

> Task :Module_ADD:compileTestJava FAILED
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:5: error: cannot find symbol
        int result = ADD.add(0, 1);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:13: error: cannot find symbol
        int result = ADD.add(1, 0);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:21: error: cannot find symbol
        int result = ADD.add(2, 3);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:29: error: cannot find symbol
        int result = ADD.add(5, 7);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:37: error: cannot find symbol
        int result = ADD.add(7, 5);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':Module_ADD:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
Successfully
Module_ADD

Task Complete!
> Task :Module_ADD:compileJava NO-SOURCE
> Task :Module_ADD:processResources NO-SOURCE
> Task :Module_ADD:classes UP-TO-DATE

> Task :Module_ADD:compileTestJava FAILED
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:5: error: cannot find symbol
        int result = ADD.add(0, 1);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:13: error: cannot find symbol
        int result = ADD.add(1, 0);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:21: error: cannot find symbol
        int result = ADD.add(2, 3);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:29: error: cannot find symbol
        int result = ADD.add(5, 7);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:37: error: cannot find symbol
        int result = ADD.add(7, 5);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':Module_ADD:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
Successfully
Module_ADD

Task Complete!
> Task :Module_ADD:compileJava NO-SOURCE
> Task :Module_ADD:processResources NO-SOURCE
> Task :Module_ADD:classes UP-TO-DATE

> Task :Module_ADD:compileTestJava FAILED
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:5: error: cannot find symbol
        int result = ADD.add(0, 1);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:13: error: cannot find symbol
        int result = ADD.add(1, 0);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:21: error: cannot find symbol
        int result = ADD.add(2, 3);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:29: error: cannot find symbol
        int result = ADD.add(5, 7);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:37: error: cannot find symbol
        int result = ADD.add(7, 5);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':Module_ADD:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
1 actionable task: 1 executed
Successfully
Module_ADD

Task Complete!
> Task :Module_ADD:compileJava NO-SOURCE
> Task :Module_ADD:processResources NO-SOURCE
> Task :Module_ADD:classes UP-TO-DATE

> Task :Module_ADD:compileTestJava FAILED
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:5: error: cannot find symbol
        int result = ADD.add(0, 1);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:13: error: cannot find symbol
        int result = ADD.add(1, 0);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:21: error: cannot find symbol
        int result = ADD.add(2, 3);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:29: error: cannot find symbol
        int result = ADD.add(5, 7);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:37: error: cannot find symbol
        int result = ADD.add(7, 5);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':Module_ADD:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
Successfully
Module_ADD

Task Complete!
> Task :Module_ADD:compileJava NO-SOURCE
> Task :Module_ADD:processResources NO-SOURCE
> Task :Module_ADD:classes UP-TO-DATE

> Task :Module_ADD:compileTestJava FAILED
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:5: error: cannot find symbol
        int result = ADD.add(0, 1);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:13: error: cannot find symbol
        int result = ADD.add(1, 0);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:21: error: cannot find symbol
        int result = ADD.add(2, 3);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:29: error: cannot find symbol
        int result = ADD.add(5, 7);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:37: error: cannot find symbol
        int result = ADD.add(7, 5);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':Module_ADD:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 5s
1 actionable task: 1 executed
Successfully
Module_ADD

Task Complete!
> Task :Module_ADD:compileJava NO-SOURCE
> Task :Module_ADD:processResources NO-SOURCE
> Task :Module_ADD:classes UP-TO-DATE

> Task :Module_ADD:compileTestJava FAILED
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:5: error: cannot find symbol
        int result = ADD.add(0, 1);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:13: error: cannot find symbol
        int result = ADD.add(1, 0);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:21: error: cannot find symbol
        int result = ADD.add(2, 3);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:29: error: cannot find symbol
        int result = ADD.add(5, 7);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
F:\GITHUB\Automated-Programming-Repair\JUnit_ModuleTest\RunTestCase_HumanEval\Module_ADD\src\test\java\ADD_TEST.java:37: error: cannot find symbol
        int result = ADD.add(7, 5);
                     ^
  symbol:   variable ADD
  location: class ADD_TEST
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':Module_ADD:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
Successfully
Module_ADD

Task Complete!
